welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime65.DwarfCode
  setDirection(direction.est)
               ^DwarfCode:7: error: not found: value Direction
	setDirection(Direction.West)
                     ^