welcome.lessons.welcome.summative.Moria.scala.code
while (!estFaceMur){
  setDirection(direction.est)
	while (!estSurBiscuit){
  	avance()
  }
  prendBiscuit()
	setDirection(Direction.West)
	while (!estSurBiscuit){
  	avance()
  }
	recule()
	poseBiscuit()
}
droite()
avance()
gauche()
avance()